# FANGS-UNFOLDING

./: .gitignore  404.html  README.md  deploy_docs.yml  environment.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy_docs.yml
FANGS_UNFOLDING/: MAIN.py  MATRIX_BUILDER.py  METHODS.py  POINT_KINETIC_COMPONENTS.py  SRC_UNFOLDING_2D_HEXX.py  TRANSFER_FUNCTION.py  UNFOLDING_1D.py  UNFOLDING_2D_HEXX.py  UNFOLDING_2D_RECT.py  UNFOLDING_3D_HEXX.py  UNFOLDING_3D_RECT.py  XSPROCESS_1D_RECT.py  XSPROCESS_2D_HEXX.py  XSPROCESS_3D_RECT.py
FANGS_UNFOLD_DEV/: MAIN.py  MAIN_UNFOLDING.py  NOISE_GREEN.py  POINT_KINETIC_COMPONENTS.py  SRC_UNFOLDING_1D.py  SRC_UNFOLDING_2D_RECT.py  TRANSFER_FUNCTION.py  UNFOLDING_2D_HEXX.py  UNFOLDING_2D_RECT.py  UNFOLDING_3D_HEXX.py  UNFOLDING_3D_RECT.py  UTILS.py  XSPROCESS_2D_RECT.py
INPUTS/: OBJECTIVES1_TEST08_2DTriMG_HTTR2G_VandV.py  OBJECTIVES1_TEST10_3DMG_Langenbuch.py  OBJECTIVES3_TEST01_2DMG_BIBLIS_AVS.py  OBJECTIVES3_TEST02_2DMG_BIBLIS_FAV.py  OBJECTIVES3_TEST07_3DTriMG_HTTR_AVS.py  OBJECTIVES3_TEST08_3DTriMG_HTTR_FAV.py  OBJECTIVES45_TEST08_3DTriMG_HTTR_FAV.py
OUTPUTS/OBJECTIVES45_TEST01_2DMG_BIBLIS_AVS/OBJECTIVES45_TEST01_2DMG_BIBLIS_AVS_UNFOLDING/OBJECTIVES45_TEST01_2DMG_BIBLIS_AVS_ADJOINT/: OBJECTIVES45_TEST01_2DMG_BIBLIS_AVS_ADJOINT_output.json
TESTS/: OBJECTIVES1_TEST07_3DTriMG_VVER400_VandV.py  OBJECTIVES1_TEST09_3DTriMG_HTTR.py  OBJECTIVES2_TEST08_2DTriMG_HTTR2G_VandV.py  OBJECTIVES2_TEST09_3DTriMG_HTTR.py  OBJECTIVES45_TEST12_3DTriMG_HTTR_AVS3S.py
docs/: index.md
docs/releases/: release_v0_1_0.md
fangs_unfolding/: MAIN.py  POSTPROCESS.py  SOLVERFACTORY.py  TRANSFER_FUNCTION.py  UNFOLDING_1D.py  UNFOLDING_2D_HEXX.py  UNFOLDING_2D_RECT.py  UNFOLDING_3D_HEXX.py  UNFOLDING_3D_RECT.py
fangs_unfolding.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
releases/release_v0_1_0/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
tests/: OBJECTIVES1_TEST03_2DMG_BIBLIS_VandV.py  OBJECTIVES2_TEST03_2DMG_BIBLIS_VandV.py  OBJECTIVES3_TEST03_2DTriMG_HTTR2G_AVS.py  OBJECTIVES3_TEST04_2DTriMG_HTTR2G_FAV.py  OBJECTIVES45_TEST07_3DTriMG_HTTR_AVS.py
(+1 files in other folders)
