[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
]
[project]
name = "fangs-unfolding"
version = "0.0.1-dev"
description = "Forward, Adjoint, and Neutron Noise General Solver with Unfolding Capabilities"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
readme = "README.md"
authors = [
   {name = "Harun Ardiansyah", email = "harunardi13@gmail.com"},
]
maintainers = [
   {name = "Harun Ardiansyah", email = "harunardi13@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
   "contourpy >= 1.3.3",
   "h5py >= 3.14.0",
   "matplotlib >= 3.10.5",
   "munkres >= 1.1.4",
   "numpy >= 2.3.2",
   "packaging >= 25.0",
   "petsc4py >= 3.23.4",
   "pillow >= 11.3.0",
   "pip >= 25.2",
   "PySide6 >= 6.9.1",
   "scipy >= 1.16.0",
]
keywords = ["neutron", "noise", "unfolding", "forward", "adjoint"]
classifiers = [
   "Development Status :: 3 - Alpha",
]

[project.urls]
Repository = "https://github.com/harunardi/FANGS-UNFOLDING.git"
Issues = "https://github.com/harunardi/FANGS-UNFOLDING/issues/new"

docs = [
   "mkdocs-material",
]