[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
]
[project]
name = "fangs-unfolding"
version = "0.0.1-dev"
description = "Forward, Adjoint, and Neutron Noise General Solver with Unfolding Capabilities"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
readme = "README.md"
authors = [
   {name = "Harun Ardiansyah", email = "harunardi13@gmail.com"},
]
maintainers = [
   {name = "Harun Ardiansyah", email = "harunardi13@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
   "contourpy >= 1.3.3",
   "h5py >= 3.14.0",
   "matplotlib >= 3.10.5",
   "numpy >= 2.3.2",
   "petsc4py >= 3.23.4",
   "scipy >= 1.16.0",
]
keywords = ["neutron", "noise", "unfolding", "forward", "adjoint"]
classifiers = [
   "Development Status :: 3 - Alpha",
]

[project.urls]
Repository = "https://github.com/harunardi/FANGS-UNFOLDING.git"
Issues = "https://github.com/harunardi/FANGS-UNFOLDING/issues/new"

[project.optional-dependencies]
docs = [
   "mkdocs-material",
]